--- a/styles.css
+++ b/styles.css
@@ -45,15 +45,134 @@
 }
 
 .add-book-modal{
+    opacity: 0%;
+    height: 75vh;
     padding-left: 2%;
     padding-top: 1%;
     border-style: solid;
-    height: 75vh;
     width: 70vh;
-    z-index: 100;
+    z-index: -100;
     position: fixed;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+.book-card{
+    min-width: 200px;
+    min-height: 105px;
+    width: 25vw;
+    height: 33vh;
+    border-style: solid;
+    border-color: rgb(63, 63, 63);
+    border-width: 3px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5%;
+}
+
+.book-add{
+    position: fixed;
+    left: 91vw;
+    top: 94vh;
+}
+
+
+#modal-title{
+    font-size: 4vw;
+    padding-bottom: 100px;
+}
+
+#add-book-form{
+    font-size: 2vw;
+    padding-top: 4%;
+}
+
+.book-author-text{
+    position:relative;
+    top: 5%
+}
+
+.behind-modal{
+    height: 100vh;
+    width: 100vw;
+}
+
+#close{
+    font-size: 100px;
+    position: absolute;
+    left: 61vw;
+    bottom: 74vh;
+}
+
+#close:hover{
+    cursor: pointer;
+}
+
+button:hover{
+    cursor: pointer;
+}
+
+input[type='radio']:hover{
+    cursor: pointer;
+}
+
+#invalid-pages{
+    position: absolute;
+}.card-grid{
+    display: grid;
+    grid-template-rows: 33vh;
+    grid-template-columns: 25vw 25vw 25vw;
+    column-gap: 2vw;
+    row-gap: 5vh;
+}
+
+.book-info{
+    padding-left: 4%;
+    padding-top: 3%;
+}
+
+.book-title{
+    font-size: 3.2vw;
+    padding-bottom:1%;
+
+}
+
+.book-author{
+    font-size: 1.5vw;
+    padding-bottom:1.5%;
+
+}
+
+.book-numOfPages{
+    font-size: 1.4vw;
+    padding-bottom:1%;
+
+}
+
+.book-read{
+    font-size: 1.3vw;
+    padding-bottom:1%;
+}
+
+.modal-flex{
+    display: flex;
+    position: absolute;
+    bottom: 30vh;
+    height: 33vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-book-modal{
     opacity: 0%;
+    height: 75vh;
+    padding-left: 2%;
+    padding-top: 1%;
+    border-style: solid;
+    width: 70vh;
+    z-index: -100;
+    position: fixed;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
