--- a/styles.css
+++ b/styles.css
@@ -212,6 +212,57 @@ button{
     font-size: 20px;
 }
 
+.confirm-buttons{
+    position: relative;
+    top: 10%;
+    height: 50px;
+    width: 75px;
+    font-size: 30px;
+    border-radius: 10%;
+}
+
+#delete-confirm{
+    left: 25%;
+    background-color: rgb(255, 117, 117);
+}
+
+#cancel-confirm{
+    left: 30%;
+    background-color: rgb(137, 255, 137);
+}
+
+.delete-book-flex{
+    z-index: -1;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position:absolute;
+    top: 10%;
+    left: 4.5%;
+    height: 90vh;
+    width: 90vw;
+}
+
+#delete-book-alert{
+    display: none;
+    opacity: 0%;
+    position: absolute;
+    border-style: solid;
+    height: 35vh;
+    width: 30vw;
+    background-color: white;
+    border-radius: 5%;
+}
+
+#delete-text{
+    font-size: 24px;
+    font-family: 'Otomanopee One', sans-serif;
+    text-align: center;
+    padding-top: 3%;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+
 button:hover, input[type='checkbox']:hover, .hover-pointer{
     cursor: pointer;
 }
