--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,26 @@
 body{
     background-color: rgb(109, 182, 173);
 }
+
+.book-image{
+    width: 93%;
+    height: 70vh;
+    min-height: 168px;
+    border-radius: 5%;
+    border-style: solid;
+    margin-bottom: 2%;
+}
+
+#book-card-flex{
+    flex-direction: column;
+    height: inherit;
+    align-items: center;
+    margin-top: 3%;
+}
+
 .card-grid{
     display: grid;
-    grid-template-rows: 33vh;
+    grid-template-rows: 80vh;
     grid-template-columns: 25vw 25vw 25vw;
     column-gap: 2vw;
     row-gap: 5vh;
@@ -20,91 +37,80 @@ body{
 }
 
 .book-info{
-    padding-left: 4%;
-    padding-top: 3%;
+    text-align: center;
 }
 
 #add-book-title{
     position:absolute;
-    top: 28%;
-    width: 300px;
-    height: 20px;
-
+    top: 22%;
 }
 
 #add-book-author{
     position:absolute;
-    top: 45%;
-    width: 300px;
-    height: 20px;
+    top: 37%;
 }
 
 #ath-txt{
     position: absolute;
-    top: 37%;
+    top: 29%;
     font-size: 33px;
 }
 
 #book-title-group{
     position: absolute;
-    top: 20%;
+    top: 15%;
     font-size: 33px;
 }
 
 .book-title{
-    font-size: 4.5vw;
-    padding-bottom:0.5%;
-
+    font-size: 50px;
+    padding-top:5%;
 }
 
 .book-author{
-    font-size: 2.4vw;
-    padding-bottom:2%;
-
+    font-size: 30px;
+    padding-bottom: 5%;
 }
 
 #num-pages{
     position:absolute;
-    top: 54%;
+    top: 45%;
     font-size: 33px;
 }
 
 #add-book-pages{
     position:absolute;
-    top: 62%;
-    width: 300px;
-    height: 20px;
+    top: 53%;
 }
 
 #have-read{
     position:absolute;
-    top: 71%;
+    top: 77%;
     font-size: 33px;
 }
 
 #add-book-read{
     position: absolute;
-    top: 79%;
-    height: 20px;
-    width: 20px;
+    top: 84%;
+    /* height: 30px; */
 }
 
 #submit{
     position: absolute;
-    top: 87%;
+    top: 90%;
     left: 69%;
     height: 40px;
     width: 100px;
 }
 
 .book-numOfPages{
-    font-size: 1.7vw;
-    padding-bottom:3%;
+    font-size: 20px;
+    padding-bottom: 15%;
 }
 
 .book-read{
-    font-size: 1.6vw;
-    padding-bottom:1%;
+    font-size: 18px;
+    padding-bottom: 10%;
 }
 
 .modal-flex{
@@ -121,9 +127,8 @@ body{
 .add-book-modal{
     font-family: 'Yanone Kaffeesatz', sans-serif;
     opacity: 0%;
-    height: 75vh;
+    height: 92vh;
     padding-left: 2%;
-    padding-top: 1%;
     border-style: solid;
     border-radius: 5%;
     width: 60vh;
@@ -132,11 +137,17 @@ body{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+#book-image-lb{
+    position: absolute;
+    top: 61%;
+    font-size: 33px;
+}
+
 .book-card{
-    min-width: 200px;
-    min-height: 105px;
-    width: 25vw;
-    height: 33vh;
+    min-width: 175px;
+    min-height: 406px;
+    width: 22vw;
+    height: 60vh;
     border-style: solid;
     border-color: rgb(63, 63, 63);
     border-width: 3px;
@@ -173,7 +184,7 @@ body{
 #modal-title{
     font-size: 5vw;
     position: absolute;
-    top: 5%;
+    top: 3%;
 }
 
 #add-book-form{
@@ -193,6 +204,12 @@ body{
     top: -4%;
 }
 
+#book-image-in{
+    position: absolute;
+    top: 69.5%;
+    /* height: 20px; */
+}
+
 #close:hover{
     cursor: pointer;
 }
@@ -200,6 +217,7 @@ body{
 .title-flex{
     display: flex;
     justify-content: center;
+    margin-top: -1%;
 }
 
 #title{
@@ -215,9 +233,9 @@ button{
 .confirm-buttons{
     position: relative;
     top: 10%;
-    height: 50px;
-    width: 75px;
-    font-size: 30px;
+    height: 6vh;
+    width: 6vw;
+    font-size: 2.3vw;
     border-radius: 10%;
 }
 
@@ -248,19 +266,24 @@ button{
     opacity: 0%;
     position: absolute;
     border-style: solid;
-    height: 35vh;
+    height: 24vh;
     width: 30vw;
     background-color: white;
     border-radius: 5%;
 }
 
 #delete-text{
-    font-size: 24px;
+    font-size: 2.5vh;
     font-family: 'Otomanopee One', sans-serif;
     text-align: center;
     padding-top: 3%;
     padding-left: 3%;
     padding-right: 3%;
+}
+
+.input-field{
+    height: 18px;
+    width: 300px;
 }
 
 button:hover, input[type='checkbox']:hover, .hover-pointer{
@@ -271,6 +294,8 @@ button:hover, input[type='checkbox']:hover, .hover-pointer{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 15%;
+    z-index: -1;
 }
 
 #empty-text{
@@ -284,6 +309,9 @@ button:hover, input[type='checkbox']:hover, .hover-pointer{
 .card-flex{
     display:flex;
     justify-content: center;
-    margin: 1%;
+    z-index: 100;
+    margin-top: -16%;
+    margin-bottom: 2%;
+    width: 100vw;
 }
 
